# tezedge-client

./: CONTRIBUTING.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/manual_tests/: test_all.rs
cli/src/: common.rs  emojies.rs  main.rs  options.rs  spinner.rs  transfer.rs  trezor.rs
cli/src/commands/: delegate.rs  delegate_local.rs  mod.rs  originate.rs  transfer.rs  transfer_local.rs
cli/src/commands/address/: get_address.rs  mod.rs
cli/src/common/: estimate_gas_consumption.rs  estimate_operation_fees.rs  exit_with_error.rs  mod.rs  yes_no_custom_amount_input.rs
cli/src/common/operation_command/: mod.rs  operation_command_api.rs  raw_operation_command.rs
cli/src/common/parsers/: mod.rs  parse_derivation_path.rs
cli/src/ledger/: execute.rs  mod.rs
cli/src/trezor/: execute.rs  get_address.rs  get_pkh.rs  mod.rs
explorer_api/: Cargo.toml
explorer_api/src/: lib.rs  tzstats.rs
ledger_api/: Cargo.toml
ledger_api/src/: ledger_error.rs  ledger_request.rs  ledger_response.rs  lib.rs  reconnect_request.rs  retry_request.rs  run_app_request.rs  unlock_request.rs
lib/: Cargo.toml
lib/src/: http_api.rs  lib.rs
lib/src/api/: get_chain_id.rs  get_constants.rs  get_counter_for_key.rs  get_head_block_hash.rs  get_manager_address.rs  get_manager_key.rs  get_manager_public_key.rs  get_protocol_info.rs  mod.rs
lib/src/api/contract/: get_contract_counter.rs  get_contract_manager_address.rs  get_contract_storage.rs  mod.rs
lib/src/api/operation/: forge_operations.rs  get_pending_operation_status.rs  get_pending_operations.rs  inject_operations.rs  mod.rs  operation.rs  preapply_operations.rs  run_operation.rs  transaction_operation.rs
lib/src/crypto/: base58check.rs  blake2b.rs  mod.rs  prefix.rs
lib/src/forge/: forge_operations.rs  forge_primitives.rs  forge_transaction_parameters.rs  micheline.rs  mod.rs
lib/src/http_api/: get_head_block_hash.rs  get_manager_public_key.rs  get_protocol_info.rs  mod.rs
lib/src/http_api/contract/: get_contract_counter.rs  get_contract_storage.rs  mod.rs
lib/src/http_api/operation/: mod.rs  preapply_operations.rs  run_operation.rs
lib/src/signer/: local_signer.rs  mod.rs  sign_operation.rs
lib/src/types/: address.rs  block_hash.rs  combined_key.rs  from_prefixed_base58check_error.rs  implicit_address.rs  key_from_base58check_error.rs  mod.rs  originated_address.rs  private_key.rs  public_key.rs  public_key_hash.rs
lib/src/types/address/: address.rs  implicit_address.rs  implicit_or_originated_with_manager.rs  mod.rs  originated_address.rs
lib/src/types/operation/: mod.rs  new_delegation_operation.rs  new_operation.rs  new_operation_group.rs  new_reveal_operation.rs  new_transaction_operation.rs  (+1 more)
lib/src/utils/: estimate_operation_fee.rs  mod.rs  parse_float_amount.rs  serde_amount.rs  serde_str.rs
rpc_api/: Cargo.toml
rpc_api/src/: lib.rs
rpc_api/src/api/: get_chain_id.rs  get_constants.rs  get_head_block_hash.rs  get_manager_public_key.rs  get_protocol_info.rs  get_version_info.rs  mod.rs  monitor_contracts.rs  monitor_heads.rs  monitor_operations.rs
rpc_api/src/http_api/: get_chain_id.rs  get_head_block_hash.rs  get_manager_public_key.rs  get_protocol_info.rs  get_version_info.rs  mod.rs
rpc_api/src/http_api_async/: get_chain_id.rs  get_manager_public_key.rs  get_protocol_info.rs  get_version_info.rs  mod.rs  monitor_heads.rs
rpc_api/tests/: test_create_transaction.rs  test_full.rs  test_rpc_get.rs  test_zkchannels_contract.rs  tests_common.rs
rpc_api/tests/resources/: cust_close.json  cust_close_0cbal.json  cust_close_1.json  merch_close.json  merch_close_1.json  zkchannels_contract_hex
rpc_api/tests/zkchannels/: contract_code_forged.rs  mod.rs
types/: Cargo.toml
types/src/: block_hash.rs  combined_key.rs  from_prefixed_base58check_error.rs  key_derivation_path.rs  lib.rs  network.rs  operation_hash.rs  private_key.rs  public_key.rs
types/src/address/: address.rs  implicit_address.rs  implicit_or_originated_with_manager.rs  mod.rs  originated_address.rs
types/src/forge/: forge_operations.rs  forge_transaction_parameters.rs  micheline.rs  mod.rs  prim_type.rs
types/src/operation/: manager_parameter.rs  mod.rs  new_delegation_operation.rs  new_operation.rs  new_operation_group.rs  new_origination_operation.rs  new_reveal_operation.rs  new_transaction_operation.rs  new_transaction_parameters.rs
utils/: Cargo.toml
utils/src/: parse_float_amount.rs
(+65 files in other folders)
