[package]
name = "cli"
version = "0.1.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

[[bin]]
name = "test_all"
path = "manual_tests/test_all.rs"

[dependencies]
lib = { path = "../lib" }
emojies = { package = "cli_emojies", path = "../cli_emojies" }
cli_spinner = { path = "../cli_spinner" }
structopt = "0.3.21"
console = "0.14.0"
dialoguer = "0.7.1"
thiserror = "1.0.24"
serde_json = "1.0.62"
