[package]
name = "explorer_api"
version = "0.1.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

[dependencies]
types = { path = "../types" }
thiserror = "1.0.24"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
ureq = { version = "2.0.1", features = ["json"] }
