[package]
name = "lib"
version = "0.1.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

[dependencies]
trezor_api = { path = "../trezor_api" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
ureq = { version = "2.0.1", features = ["json"] }
sodiumoxide = "0.2.6"
base58 = "0.1.0"
failure = "0.1.8"
rust_decimal = "1.10.3"
