[package]
name = "rpc_api"
version = "0.1.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

[dependencies]
crypto = { path = "../crypto" }
types = { path = "../types" }
utils = { path = "../utils" }
thiserror = "1.0.24"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
ureq = { version = "2.0.1", features = ["json"], optional = true }
futures-core = "0.3"
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }

[dev-dependencies]
signer = { path = "../signer" }
explorer_api = { path = "../explorer_api" }
tokio = { version = "1.5.0", features = ["full"] }
paste = "1"

[features]
default = ["sync", "async"]
sync = ["ureq"]
async = ["reqwest", "futures-util"]
